Finish user sign up

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,9 +11,9 @@ AllCops:
     - '**/tmp/**/*'
     - '**/vendor/**/*'
 
-Performance:
-  Exclude:
-    - '**/test/**/*'
+  # Performance:
+    # Exclude:
+    # - '**/test/**/*'
 
 # Prefer assert_not over assert !
 Rails/AssertNot:
