Add password reset

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,7 +13,7 @@ AllCops:
 
   # Performance:
     # Exclude:
-    # - '**/test/**/*'
+    - '**/test/**/*'
 
 # Prefer assert_not over assert !
 Rails/AssertNot:
